Increasing image width scale to avoid distortion. Also changed image in nexpo page

--- a/src/pages/MilestonePage/styles.css
+++ b/src/pages/MilestonePage/styles.css
@@ -28,7 +28,7 @@
 }
 
 .asset {
-  width: 50%;
+  width: 60%;
 }
 
 .exit {
